[package]
name = "carbide-dns"
version = "0.0.1"
description = "Carbide is bare metal provisioning system with auto-discovery and API based machine manipulation"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-dns"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.43"
clap = { workspace = true }
eyre = "*"
futures = "0.3"
itertools = "*"
thiserror = "1.0"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
trust-dns-server = { version = "0.21.1" }

# [local-dependencies]
forge-tls = { path = "../common/tls" }
forge-version = { path = "../common/version" }
rpc = { path = "../rpc" }

[build-dependencies]
forge-version = { path = "../common/version" }
