[package]
name = "forge-http-connector"
version = "0.1.0"
edition.workspace = true
#license.file.workspace = true
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = { version = "0.24.0"}
tokio = { workspace = true, features=["rt", "macros"] }
log = "0.4.19"
dsocket = { path = "../dsocket" }
tracing = "0.1.40"
socket2 = "0.5.5"
hyper = { version = "0.14.27", default-features = false, features = ["client", "runtime", "tcp"] }
hyper-rustls = { version = "0.24.0", default-features = false, optional = true}
tokio-rustls = { version = "0.23.0", features = ["dangerous_configuration"]}
pin-project-lite = "0.2.11"
futures-util = "0.3.28"
http = { version = "0.2.9", features = [] }
tower-service = "0.3.2"
tower = "0.4.13"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "0.14.27", default-features = false, features = ["client", "tcp", "http1", "http2"] }
hyper-rustls = { version = "0.24", default-features = false, features = ["tokio-runtime", "webpki-tokio", "http1", "http2"] }
tokio = { workspace=true, features = ["rt", "macros"] }
