[package]
name = "forge_credentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
vaultrs = "0.6"
