[package]
name = "forge_secrets"
version = "0.1.0"
edition.workspace = true
license = "LicenseRef-NvidiaProprietary"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
eyre = "*"
serde = {version = "1.0", features = ["derive"] }
tracing = "*"
uuid = { version = "1.0", features = ["v4", "serde"] }
vaultrs = "0.6"

rpc = { path = "../rpc" }
