[package]
name = "forge_secrets"
version = "0.1.0"
edition.workspace = true
license = "LicenseRef-NvidiaProprietary"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6"
async-trait = "0.1"
eyre = "*"
opentelemetry = { version = "0.21.0", features = ["metrics"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tracing = "*"
uuid = { version = "1.0", features = ["v4", "serde"] }
vaultrs = "0.7"

rpc = { path = "../rpc" }
