[package]
name = "admin-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ssh-console = { path = "../ssh-console" }

[[bin]]
name = "ssh_console_escape_filter"
path = "fuzz_targets/ssh_console_escape_filter.rs"
test = false
doc = false
bench = false
