[package]
name = "health"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "forge-hw-health"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.92"
base64 = "0.22.1"
clap = { workspace = true }
chrono = "*"
eyre = "*"
futures = "0.3"
libredfish = { workspace = true }
humantime = "*"
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util = "0.1.2"
lazy_static = "1.5.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The "*" version has old `digest` who's `subtle` conflicts with reqwest
sha2 = "0.11.0-pre.1"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
thiserror = "2"
tokio = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
health-report = { path = "../common/health-report" }
rpc = { path = "../rpc" }
forge-tls = { path = "../common/tls" }
forge-version = { path = "../common/version" }
utils = { path = "../common/utils" }

[build-dependencies]
forge-version = { path = "../common/version" }

[lints]
workspace = true