[package]
name = "forge-host-support"
version = "0.1.0"
edition.workspace = true
license = "LicenseRef-NvidiaProprietary"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
eyre = "*"
libudev = "0.3"
procfs = "0.14"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { workspace = true }
toml = "0.8.8"
tonic = { workspace = true }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
uname = "0.1"
uuid = "1.0"

# local crate dependencies
forge_secrets = { path = "../forge_secrets" }
forge-tls = { path = "../tls" }
rpc = { path = "../rpc" }
utils = { path = "../utils" }
csv = "1.2.1"
smbios-lib = "0.9.0"
