[package]
name = "carbide-log-parser"
version = "0.0.2"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-log-parser
name = "forge-log-parser"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
chrono = "*"
anyhow = "1.0.92"
getopts = "0.2.21"
serde_json = "1"
thiserror = "2"
tokio = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
carbide-health-report = { path = "../common/health-report" }
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../common/uuid" }
carbide-tls = { path = "../common/tls" }
carbide-version = { path = "../common/version" }

[build-dependencies]
carbide-version = { path = "../common/version" }

[lints]
workspace = true
