[package]
name = "carbide-log-parser"
version = "0.0.2"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-log-parser
name = "forge-log-parser"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
serde = { features = ["derive"] , workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
getopts = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
carbide-health-report = { path = "../common/health-report" }
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../common/uuid" }
carbide-tls = { path = "../common/tls" }
carbide-version = { path = "../common/version" }

[build-dependencies]
carbide-version = { path = "../common/version" }

[lints]
workspace = true
