[package]
name = "carbide-pxe"
version = "0.0.1"
description = "Carbide is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "carbide"
path = "src/main.rs"

[dependencies]
base64 = "0.21.5"
clap = { workspace = true }
rocket = { version = "= 0.5.0-rc.1", features = ["uuid"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tera = "*"
thiserror = "1.0"
tokio = { workspace = true }
toml = "0.8.8"
tonic = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }


# [local-dependencies]
forge-host-support = { path = "../common/host-support" }
forge-tls = { path = "../common/tls" }
forge-version = { path = "../common/version" }
rpc = { path = "../rpc" }

[build-dependencies]
forge-version = { path = "../common/version" }

[dev-dependencies]
toml = "0.8.8"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_codegen]
version = "= 0.5.0-rc.1"

[dependencies.rocket_http]
version = "= 0.5.0-rc.1"
