[package]
name = "rpc"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
eyre = "0.6"
hyper = { version = "0.14.27", features = ["full"]}
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
lazy_static = "1.4"
mac_address = "*"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
rustls-pemfile = "1.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { workspace = true }
tokio-rustls = { version = "0.24", features = ["dangerous_configuration"] }
tonic = { workspace = true }
tonic-reflection = "0.10"
tower = "0.4.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
x509-parser = "0.15.1"
pnet = "0.34.0"
ipnetwork = "0.20.0"
log = "0.4.19"
hickory-resolver = "0.24.0"
resolv-conf = "0.7.0"
tracing = "0.1.37"
socket2 = "0.4.9"
libc = "0.2.147"
futures-util = "0.3.28"
netif = "0.1.6"
pwhash = "1.0.0"
rand = "0.8.5"
regex = "1.6"
thiserror = "1.0"
tonic-build = "0.10.2"
tryhard = "0.5.1"

# [local-dependencies]
forge-http-connector = { path = "../common/http-connector" }
forge-tls = { path = "../common/tls" }

[build-dependencies]
tonic-build = "0.10.2"
