[package]
name = "rpc"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
eyre = "0.6"
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true, features = ["http2"] }
hyper-util = { version = "^0.1", features = ["server", "http1", "http2", "tokio", "client", "client-legacy"] }
mac_address = "*"
prost = "0.13"
prost-types = "0.13"
rustls-pemfile = "^2"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.5.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
x509-parser = "0.17.0"
log = "0.4.19"
hickory-resolver = "0.24.0"
resolv-conf = "0.7.0"
tracing = "0.1.37"
thiserror = "2.0"
tonic-build = "0.12"
tryhard = "0.5.1"
rustls = { workspace = true, features = ["default", "ring"] }
async-trait = "0.1.88"
# [local-dependencies]
forge-http-connector = { path = "../common/http-connector" }
forge-tls = { path = "../common/tls" }
health-report = { path = "../common/health-report" }
tonic-client-wrapper = { path = "../common/tonic-client-wrapper", default-features = false } # don't depend on codegen features at runtime

[build-dependencies]
tonic-build = "0.12"
tonic-client-wrapper = { path = "../common/tonic-client-wrapper" }