[package]
name = "scout"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "forge-scout"
path = "src/main.rs"

[dependencies]
base64 = "0.21.5"
clap = { workspace = true }
eyre = "*"
efivar = "0.2.1"
lazy_static = "1.4.0"
libc = "0.2"
once_cell = "1.15"
procfs = "0.14"
pwhash = "1.0.0"
rand = "0.8"
regex = "1.6"
rlimit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "*"
thiserror = "1"
tokio = { workspace = true }
tonic = { workspace = true }
tryhard = "0.5.1"
uname = "0.1"
uuid = "1.0"

# [local-dependencies]
rpc = { path = "../rpc" }
forge-host-support = { path = "../common/host-support" }
forge-tls = { path = "../common/tls" }
forge-version = { path = "../common/version" }
utils = { path = "../common/utils" }

[build-dependencies]
forge-version = { path = "../common/version" }
