[package]
name = "carbide-scout"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "scout"

[[bin]]
# TODO: rename to carbide-scout
name = "forge-scout"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-rpc = { path = "../rpc" }
carbide-host-support = { path = "../common/host-support" }
carbide-tls = { path = "../common/tls" }
carbide-uuid = { path = "../common/uuid" }
carbide-version = { path = "../common/version" }
carbide-utils = { path = "../common/utils" }
carbide-machine-validation = { path = "../common/machine-validation" }
carbide-mlxconfig-device = { path = "../common/mlxconfig/device" }
carbide-mlxconfig-lockdown = { path = "../common/mlxconfig/lockdown" }

chrono = "0.4.34"
clap = { workspace = true }
eyre = "*"
efivar = "2.0.0"
lazy_static = "1.4.0"
once_cell = "1.15"
pwhash = "1.0.0"
regex = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smbios-lib = "0.9.2"
tracing = "*"
thiserror = "2"
tokio = { workspace = true }
tonic = { workspace = true }
tryhard = "0.5.1"
tss-esapi = "7.5.0"
uname = "0.1"
uuid = "1.0"
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
futures-util = "0.3"
prost-types = "0.14.1"
x509-parser = "0.17.0"

[build-dependencies]
carbide-version = { path = "../common/version" }

[lints]
workspace = true
