[package]
name = "ssh-console"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
ctor = "0.4.2"
eyre = "0.6.12"
lazy_static = "1.5.0"
tokio = { workspace = true, features = ["tokio-macros", "rt-multi-thread", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"

[dev-dependencies]
bmc-mock = { path = "../dev/bmc-mock" }
machine-a-tron = { path = "../dev/machine-a-tron" }
utils = { path = "../common/utils" }
temp-dir = "0.1.14"
futures = "0.3.31"
api-test-helper = { path = "../common/api-test-helper" }
russh = "0.52.1"
ssh_console_mock_api_server = { path = "mock_api_server" }
forge-uuid = { path = "../common/uuid" }
rand = "0.9.1"
