[package]
name = "carbide-ssh-console"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "ssh_console"

[[bin]]
# TODO: rename to carbide-ssh-console
name = "ssh-console"
path = "src/main.rs"

[dependencies]

# local dependencies
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../common/uuid" }
carbide-tls = { path = "../common/tls" }

ctor = "0.4.2"
lazy_static = "1.5.0"
tokio = { workspace = true, features = ["tokio-macros", "rt-multi-thread", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.14"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["color", "derive", "env"] }
russh = "0.52.1"
http = { version = "1.3.1" }
tonic = { workspace = true, features = ["default"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14.1"
prost-types = "0.14.1"
ringbuf = "0.4.8"
nix = { version = "0.30.1", features = ["process", "term", "fs"] }
libc = "0.2.174"
futures = "0.3.31"
futures-util = "0.3.31"
duration-str = "0.17.0"
chrono = "0.4.41"
strip-ansi-escapes = "0.2.1"
rand = "0.9.1"
opentelemetry = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
prometheus = "0.13.0"
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
http-body-util = "0.1.3"
size = { version = "0.5.0", features = ["serde"] }

[dev-dependencies]
bmc-mock = { path = "../dev/bmc-mock" }
carbide-machine-a-tron = { path = "../dev/machine-a-tron" }
carbide-utils = { path = "../common/utils" }
temp-dir = "0.1.14"
futures = "0.3.31"
carbide-api-test-helper = { path = "../common/api-test-helper" }
carbide-ssh-console-mock-api-server = { path = "mock_api_server" }
eyre = "0.6.12"
indoc = "2.0.6"
prometheus-text-parser = { path = "../common/prometheus-text-parser" }

[lints]
workspace = true
