[package]
name = "carbide-api-db"
version = "0.0.0"
edition.workspace = true
description = "Database functions for carbide-api"
license-file.workspace = true
authors.workspace = true

[lib]
name = "db"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
config-version = { path = "../../common/config-version", features = ["sqlx"] }
carbide-host-support = { path = "../../common/host-support", default-features = false }
carbide-network = { path = "../../common/network", features = ["sqlx"] }
carbide-version = { path = "../../common/version" }
carbide-health-report = { path = "../../common/health-report" }
carbide-rpc = { path = "../../rpc", features = ["sqlx"] }
carbide-utils = { path = "../../common/utils", features = ["sqlx"] }
carbide-uuid = { path = "../../common/uuid", features = ["sqlx"] }
carbide-measured-boot = { path = "../../common/measured-boot", features = ["sqlx"] }
carbide-api-model = { path = "../model" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
async-trait = "*"
chrono = "0.4.34"
domain = "0.10.1"
eyre = "*"
futures = "0.3"
futures-util = "0.3"
ipnetwork = { workspace = true, features = ["serde"] }
itertools = "*"
lazy_static = "1.5.0"
libnvmesh = { workspace = true }
mac_address = "1.1.2"
names = { version = "0.14.0", default-features = false }
octseq = "0.5.1"
regex = "1.6"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
thiserror = "2.0"
time = "0.3.36"
tokio = { workspace = true }
toml = "0.8.8"
tonic = { workspace = true }
tracing = "*"
tss-esapi = { version = "7.5.0", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
#these are alphabetized

[features]
default = ["linux-build"]
linux-build = [
    "tss-esapi",
    "carbide-sqlx-testing/linux-build",
    "carbide-host-support/linux-build",
]

[build-dependencies]
carbide-version = { path = "../../common/version" }

[dev-dependencies]
lazy_static = "1.4.0"
carbide-macros = { path = "../../common/carbide-macros" }
carbide-sqlx-testing = { path = "../../common/sqlx-testing", default-features = false }

[lints]
workspace = true
