[package]
name = "carbide-api-integration-tests"
version = "0.0.0"
edition.workspace = true
description = "Integration tests for carbide-api"
license-file.workspace = true
authors.workspace = true

[dev-dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
carbide-machine-a-tron = { path = "../../dev/machine-a-tron" }
carbide-utils = { path = "../../common/utils", features = ["sqlx"] }
carbide-api-test-helper = { path = "../../common/api-test-helper" }
bmc-mock = { path = "../../dev/bmc-mock" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
ctor = "0.2"
eyre = "*"
futures = "0.3"
itertools = "*"
serde_json = "*"
sqlx = { workspace = true, features = ["postgres"] }
temp-dir = "0.1.14"
tokio = { workspace = true }
tracing = "*"
#these are alphabetized

[lints]
workspace = true
