[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "forge-dpu-agent"
path = "src/main.rs"

[dependencies]
arc-swap = "1.6"
axum = { workspace = true, features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
async-trait = "0.1.77"
blake3 = "1.4"
chrono = "0.4.38"
clap = { workspace = true }
data-encoding = "2.3.3"
diff = "0.1"
eyre = "*"
futures = "0.3"
futures-util = "0.3"
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
governor = "*"
http-body = "1.0.1"
humantime = "*"
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client-legacy"] }
http-body-util = "0.1.2"
ipnetwork = { workspace = true }
lazy_static = "*"
libc = "*"
mac_address = "1.1.2"
mockall = "0.13.0"
netlink-packet-route = "=0.19"
nonzero_ext = "*"

opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["spec_unstable_metrics_views"] }

prometheus = "0.13.3"
rand = "0.9"
regex = "1.10.2"
rtnetlink = "0.14"
rustls = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.27"
surge-ping = "0.8.1"
tracing = "*"
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
resolv-conf = "0.7.0"
hickory-resolver = "0.24.0"
version-compare = "0.2.0"

# [local-dependencies]
config-version = { path = "../../common/config-version" }
forge-certs = { path = "../certs" }
forge-host-support = { path = "../../common/host-support" }
forge-http-connector = { path = "../../common/http-connector" }
forge-network = { path = "../../common/network" }
forge-systemd = { path = "../systemd" }
forge-tls = { path = "../../common/tls" }
forge-version = { path = "../../common/version" }
health-report = { path = "../../common/health-report" }
rpc = { path = "../../rpc" }
utils = { path = "../../common/utils" }

[build-dependencies]
forge-version = { path = "../../common/version" }

[dev-dependencies]
ctor = "0.2"
tempfile = "3"
prost = "0.13"
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.0"
